Can Launch Minesweeper From Menu - Selecting Minesweeper and associated settings clears menu and launches the game. - (Bug) selecting size other than 10 causes game grid to be mis-aligned.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .board {
     display: grid;
-    grid: repeat(10, 2em) / auto-flow 2em;
+    grid: repeat(10, 2.1em) / auto-flow 2.1em;
 }
 
 .cell {
